[package]
name = "angulu-rs"
version = "0.1.0"
edition = "2021"
authors = ["Elvis Ding <elvisding0307@gmail.com>"]
description = ""
keywords = []
license = "GPL-3.0"

[lib]
name = "angulu"
version = "0.1.0"

[dependencies]
rand = "0.8.5"
# 编码
base64 = "0.21.0"
hex = "0.4.3"
# 密码组件
ring = "0.17.8"
chacha20 = "0.9.1"
# SM4算法
gm-sm4 = "0.10.0"
# 哈希
crc32fast = "1.4.2"
crc32c = "0.6.8"
# 序列化
serde = "1.0.210"
# 错误处理
thiserror = "1.0"
