[package]
name = "angulu"
version = "0.1.2"
edition = "2024"
authors = ["Elvis Ding <elvisding0307@gmail.com>"]
description = "angulu is a library, which contains some cipher components."
keywords = ["crypter", "hash", "cipher"]
license = "GPL-3.0"
repository = "https://github.com/elvisding0307/angulu-rs"

[lib]
name = "angulu"

[dependencies]
rand = { version = "=0.8.5" }
# 编码
base64 = { version = "=0.21.7" }
hex = { version = "=0.4.3" }
# 密码组件
ring = { version = "=0.17.14" }
chacha20 = { version = "=0.9.1" }
# SM4算法
gm-sm4 = { version = "=0.10.0" }
# 哈希
crc32fast = { version = "=1.4.2" }
crc32c = { version = "=0.6.8" }
# 序列化
serde = { version = "=1.0.210" }
# 错误处理
thiserror = { version = "=1.0.69" }
